--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,10 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: auth_db,chat_db
+      POSTGRES_DB: chat_db
       PGDATA: /data/postgres
     volumes:
-      - postgres:/data/postgres
+      - gw2_chat_postgres:/data/postgres
 
   pgadmin:
     image: dpage/pgadmin4
@@ -22,24 +22,9 @@ services:
       PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-secret}
       PGADMIN_CONFIG_SERVER_MODE: 'False'
     volumes:
-      - pgadmin:/var/lib/pgadmin
+      - gw2_chat_pgadmin:/var/lib/pgadmin
     ports:
       - "5050:80"
-
-  keycloak:
-    image: quay.io/keycloak/keycloak:25.0.0
-    container_name: keycloak_container
-    restart: unless-stopped
-    ports:
-      - "8888:8080"
-    environment:
-      KEYCLOAK_ADMIN: ${KEYCLOAK_ADMIN}
-      KEYCLOAK_ADMIN_PASSWORD: ${KEYCLOAK_ADMIN_PASSWORD}
-      KC_DB: postgres
-      KC_DB_URL: jdbc:postgresql://postgres_db:5432/auth_db
-      KC_DB_USERNAME: postgres
-      KC_DB_PASSWORD: ${POSTGRES_PASSWORD}
-    command: [ 'start-dev' ]
 volumes:
-  postgres:
-  pgadmin:
+  gw2_chat_postgres:
+  gw2_chat_pgadmin:
