--- a/database-migration/src/main/resources/application.yml
+++ b/database-migration/src/main/resources/application.yml
@@ -5,10 +5,11 @@ spring:
     url: ${DATABASE_URL}
     username: ${DATABASE_USERNAME}
     password: ${DATABASE_PASSWORD}
-    jpa:
-      open-in-view: false
-      database-platform: org.hibernate.dialect.MySQLDialect
-      hibernate:
-        ddl-auto: validate
-    liquibase:
-      change-log: classpath:db/changelog/db.changelog-master.xml
+  jpa:
+    open-in-view: false
+    properties:
+      hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
+    hibernate:
+      ddl-auto: validate
+  liquibase:
+    change-log: classpath:db/changelog/db.changelog-master.xml
