--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,22 @@ services:
       - gw2_chat_pgadmin:/var/lib/pgadmin
     ports:
       - "5050:80"
+
+  rabbitmq:
+    image: rabbitmq:3-management-alpine
+    container_name: rabbitmq_container
+    environment:
+      RABBITMQ_ERLANG_COOKIE: "daf88a680043e0ba4556887e67928197"
+      RABBITMQ_DEFAULT_USER: "guest"
+      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_PASSWORD:-guest}
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    volumes:
+      - gw2_rabbitmq_data:/var/lib/rabbitmq/
+      - gw2_rabbitmq_log:/var/log/rabbitmq
 volumes:
   gw2_chat_postgres:
   gw2_chat_pgadmin:
+  gw2_rabbitmq_data:
+  gw2_rabbitmq_log:
