added cors config

--- a/enchanted-message-bridge/src/main/resources/application.yml
+++ b/enchanted-message-bridge/src/main/resources/application.yml
@@ -32,3 +32,7 @@ logging:
 
 file:
   upload-path: /home/kakan/Workspace/gw2-poc-chat-system/uploads/
+
+web:
+  config:
+    allowed-origins: http://localhost:4200
