added Dockerfile for app and migration and used env for nextjs app.

--- a/database-migration/src/main/resources/application.yml
+++ b/database-migration/src/main/resources/application.yml
@@ -2,9 +2,9 @@ spring:
   application:
     name: Database Migration
   datasource:
-    url: ${DATABASE_URL}
-    username: ${DATABASE_USERNAME}
-    password: ${DATABASE_PASSWORD}
+    url: ${DATABASE_URL:jdbc:postgresql://localhost:5432/chat_db}
+    username: ${DATABASE_USERNAME:postgres}
+    password: ${DATABASE_PASSWORD:secret}
   jpa:
     open-in-view: false
     properties:
