--- a/apps-docker-compose.yml
+++ b/apps-docker-compose.yml
@@ -9,7 +9,6 @@ services:
       DATABASE_PASSWORD: ${POSTGRES_PASSWORD:-secret}
   emb_chat_server:
     image: emb-chat-server:2024-07-02-10-58
-    container_name: emb_chat_server_container
     restart: unless-stopped
     environment:
       DATABASE_URL: ${DATABASE_URL:-jdbc:postgresql://postgres_db:5432/chat_db}
@@ -20,12 +19,18 @@ services:
       RABBITMQ_PORT: ${RABBITMQ_PORT:-5672}
       RABBITMQ_USERNAME: ${RABBITMQ_USERNAME:-guest}
       RABBITMQ_PASSWORD: ${RABBITMQ_PASSWORD:-guest}
-      FILE_UPLOAD_PATH: ${FILE_UPLOAD_PATH:-/app/chat_server/files}
+      FILE_UPLOAD_PATH: ${FILE_UPLOAD_PATH:-/app/chat_server/files/}
       CORS_ALLOWED_ORIGINS: ${CORS_ALLOWED_ORIGINS:-http://localhost:3000}
-    ports:
-      - "8080:8080"
+    deploy:
+      replicas: 3
     volumes:
       - gw2_emb_chat_server:/app/chat_server/files
+  nginx:
+    image: nginx:1.27.0-perl
+    ports:
+      - "8080:80"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
   chat_client:
     image: chat-client:2024-07-02-02-46
     container_name: chat_client_container
